# labs-molt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.claude/skills/simplicity-first/: SKILL.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_request.yml
.github/actions/test-template/: action.yml
.github/workflows/: cherry-pick-release-commit.yml  cicd-approve-test-queue.yml  cicd-main.yml  claude-review.yml  community-bot.yml  copyright-check.yml  fern-docs-ci.yml  fern-docs-preview-build.yml  fern-docs-preview-comment.yml  publish-fern-docs.yml  python-package.yml  release.yaml
dockerfile/: Dockerfile
docs/: index.md  index.yml
docs/fern/: .gitignore  README.md  docs.yml  package.json
docs/fern/scripts/: sanitize-generated-mdx.mjs
docs/fern/versions/: nightly.yml
examples/python/agents/: chat_geo3k.py  chat_minimal.py
examples/scripts/quick_start/: rl_qwen3_4b.sh  rl_qwen3_6_35b.sh
examples/scripts/slurm/: rl_distill_omni3.sh  rl_distill_omni3_30b.sh  rl_glm5_2_753b.sh  rl_omni3.sh  rl_omni3_30b.sh  rl_qwen3_4b.sh  rl_qwen3_5_397b.sh  rl_qwen3_6.sh  rl_qwen3_6_35b.sh
examples/tutorial/: README.md  README_CN.md  WALKTHROUGH.md  WALKTHROUGH_CN.md  cpu_rl_walkthrough.py  requirements-cpu.txt
molt/: __init__.py  package_info.py
molt/agents/: _chat_server.py  base.py  chat_agent.py
molt/cli/: __init__.py  common_args.py  train_rl_ray.py  train_sft.py
molt/datasets/: __init__.py  prompts_dataset.py
molt/models/: __init__.py  base.py  critic.py  loss.py
molt/trainer/: __init__.py  rl_trainer.py  sft_trainer.py
molt/trainer/algorithm/: __init__.py  advantage.py  experience.py
molt/trainer/fsdp/: __init__.py  checkpoint.py  optimizer_offload.py  packing.py  refit.py  strategy.py
molt/trainer/rollout/: __init__.py  experience_maker.py  router.py  samples_generator.py
molt/trainer/vllm/: __init__.py  vllm_engine.py  vllm_worker_wrap.py
molt/trainer/workers/: __init__.py  actor_group.py  critic_actor.py  policy_actor.py
molt/utils/: __init__.py  distributed_util.py  seqlen_balancing.py  vlm_utils.py
tests/: test_router.py  test_samples_generator.py
tests/unit/: test_actor_forward_output.py  test_chat_server.py  test_checkpoint_client_state.py  test_experience.py  test_gae_value_loss.py  test_geo3k_agent.py  test_global_token_loss.py  test_kl_controller.py  test_math_grader.py  test_policy_loss.py  test_python_executor.py  test_refit_tied_lm_head.py  test_refit_utils.py  test_rl_trainer.py  test_router.py  test_routing_replay.py  test_samples_generator.py  test_sft_dataset.py  test_sft_trainer.py  test_vllm_engine.py
tests/unit/launch_scripts/: Launch_Unit_Tests.sh
